Fixed overflow problem with syntax highlight blocks

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -140,6 +140,8 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #fff;
+    max-width: 100%;
+    word-wrap: break-word;
 }
 
 code {
