--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -3,6 +3,7 @@
  */
 .highlight {
     background: #fff;
+    max-width: 100%;
 
     .highlighter-rouge & {
       background: #eef;
